crates/alder-can/src/snapshots/alder_can__pattern__tests__literal_int.snap
---
source: crates/alder-can/src/pattern.rs
description: "42"
---
(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 3,
            },
        },
        value: Int(
            42,
        ),
    },
    {},
)
