crates/alder-can/src/snapshots/alder_can__pattern__tests__literal_str.snap
---
source: crates/alder-can/src/pattern.rs
description: "\"hello\""
---
(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 8,
            },
        },
        value: Str(
            "hello",
        ),
    },
    {},
)
