crates/alder-can/src/snapshots/alder_can__pattern__tests__record_ctor_in_pattern.snap
---
source: crates/alder-can/src/pattern.rs
description: Point
---
[
    PatternHasRecordCtor {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 6,
            },
        },
        name: "Point",
    },
]
