crates/alder-can/src/snapshots/alder_can__pattern__tests__record_pattern.snap
---
source: crates/alder-can/src/pattern.rs
description: "{ x, y }"
---
(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 9,
            },
        },
        value: Record(
            [
                "x",
                "y",
            ],
        ),
    },
    {
        "x": Region {
            start: Position {
                line: 1,
                column: 3,
            },
            end: Position {
                line: 1,
                column: 4,
            },
        },
        "y": Region {
            start: Position {
                line: 1,
                column: 6,
            },
            end: Position {
                line: 1,
                column: 7,
            },
        },
    },
)
