crates/alder-can/src/snapshots/alder_can__pattern__tests__tuple_four.snap
---
source: crates/alder-can/src/pattern.rs
description: "( a, b, c, d )"
---
[
    TupleLargerThanThree {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 15,
            },
        },
    },
]
