crates/alder-can/src/snapshots/alder_can__pattern__tests__variable.snap
---
source: crates/alder-can/src/pattern.rs
description: x
---
(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 2,
            },
        },
        value: Var(
            "x",
        ),
    },
    {
        "x": Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 2,
            },
        },
    },
)
